package com.codecool.sneakersStore.model;

public class LoggedUser {
}
