package com.codecool.sneakersStore.model;

public class PaymentDetail {
}
