package com.codecool.sneakersStore.model;

public class Report {
}
